<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Divisions">

    <Button
        android:id="@+id/dhaka"
        android:layout_width="140dp"
        android:layout_height="55dp"
        android:layout_gravity="start|top"
        android:layout_marginStart="150dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/button_rounded"
        android:clickable="true"
        android:focusable="true"
        android:shadowRadius="25"
        android:text="@string/Dhaka"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:visibility="visible"
        tools:visibility="visible" />

    <Button
        android:id="@+id/chittagong"
        android:layout_width="140dp"
        android:layout_height="55dp"
        android:layout_gravity="start|top"
        android:layout_marginStart="150dp"
        android:layout_marginTop="140dp"
        android:background="@drawable/button_rounded"
        android:text="@string/chittagong"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:visibility="visible"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button3"
        android:layout_width="140dp"
        android:layout_height="55dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="220dp"
        android:background="@drawable/button_rounded"
        android:layout_gravity="center_horizontal|top"
        android:text="@string/sylhet"
        android:textColor="#FFFFFF"
        android:visibility="visible"
        tools:visibility="visible" />

    <Button
        android:id="@+id/khulna"
        android:layout_width="140dp"
        android:layout_height="55dp"
        android:layout_gravity="start|top"
        android:layout_marginStart="150dp"
        android:layout_marginTop="300dp"
        android:background="@drawable/button_rounded"
        android:text="@string/khulna"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:visibility="visible"
        tools:visibility="visible" />

    <Button
        android:id="@+id/rajshahi"
        android:layout_width="140dp"
        android:layout_height="55dp"
        android:layout_gravity="start|top"
        android:layout_marginStart="150dp"
        android:layout_marginTop="380dp"
        android:background="@drawable/button_rounded"
        android:text="@string/rajshahi"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:visibility="visible"
        tools:visibility="visible" />

    <Button
        android:id="@+id/mymensingh"
        android:layout_width="145dp"
        android:layout_height="55dp"
        android:layout_gravity="start|top"
        android:layout_marginStart="150dp"
        android:layout_marginTop="460dp"
        android:background="@drawable/button_rounded"
        android:text="@string/rangpur"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:visibility="visible"
        tools:visibility="visible" />

    <Button
        android:id="@+id/barisal"
        android:layout_width="145dp"
        android:layout_height="55dp"
        android:layout_gravity="start|top"
        android:layout_marginStart="150dp"
        android:layout_marginTop="540dp"
        android:background="@drawable/button_rounded"
        android:text="@string/barisal"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:visibility="visible"
        tools:visibility="visible" />

</RelativeLayout>