<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/see_places"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="false"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="91dp"
        android:background="#80AEFC8A"
        android:text="@string/see_places"
        android:textColor="#000000"
        android:textSize="16sp" />

    <Button
        android:id="@+id/sign_in"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="false"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="466dp"
        android:background="#80AEFC9A"

        android:text="@string/sign_in"
        android:textColor="#000000"
        android:textSize="16sp"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/register"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="false"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="101dp"
        android:layout_marginTop="550dp"
        android:background="#80AEFC9A"
        android:text="@string/b3"
        android:textColor="#000000"
        android:textSize="16sp" />

    <ImageView
        android:contentDescription="@string/logo"
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="110dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="151dp"
        android:layout_marginTop="99dp"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/addPlace"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="383dp"
        android:layout_marginEnd="92dp"
        android:background="#80AEFC9A"
        android:text="@string/Add_place"
        android:textSize="16sp" />
</RelativeLayout>