<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="Overdraw">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="110dp"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/logo"
        android:layout_centerInParent="true"
        android:layout_marginTop="88dp"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/see_according_to_divisions"
        android:layout_width="213dp"
        android:layout_height="58dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="95dp"
        android:layout_marginTop="270dp"
        android:background="@drawable/button_rounded"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/See_according_to_division"
        android:textColor="#FFFFFF"
        android:visibility="visible" />

    <Button
        android:id="@+id/button2"
        android:layout_width="213dp"
        android:layout_height="58dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="95dp"
        android:layout_marginTop="400dp"
        android:background="@drawable/button_rounded"
        android:text="@string/See_by_catagory_of_Places"
        android:textColor="#FFFFFF" />

</RelativeLayout>