<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Auth_Home">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="125dp"
        android:layout_height="134dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="140dp"
        android:layout_marginTop="99dp"
        android:contentDescription="@string/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/see_places"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="false"
        android:layout_marginStart="100dp"
        android:layout_marginTop="100dp"
        android:background="#80AEFC8A"
        android:text="@string/see_places"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/addPlace"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:background="#80AEFC9A"
        android:text="@string/Add_place"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/see_places"
        app:layout_constraintTop_toBottomOf="@+id/see_places"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>