<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sd3"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore=".Home">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="125dp"
        android:layout_height="134dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="140dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/see_according_to_divisions"
        android:layout_width="213dp"
        android:layout_height="58dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="120dp"
        android:background="@drawable/button_rounded"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/See_according_to_division"
        android:textColor="#FFFFFF"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button2"
        android:layout_width="213dp"
        android:layout_height="58dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="80dp"
        android:background="@drawable/button_rounded"
        android:text="@string/See_by_catagory_of_Places"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/see_according_to_divisions"
        app:layout_constraintStart_toStartOf="@+id/see_according_to_divisions"
        app:layout_constraintTop_toBottomOf="@+id/see_according_to_divisions"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>